--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -109,12 +109,12 @@
 
         <TableLayout
             android:id="@+id/TableLayout2"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:stretchColumns="2">
+            android:stretchColumns="*"
+            >
 
             <TableRow>
-
                 <Button
                     android:id="@+id/btn_start_speech"
                     android:layout_width="wrap_content"
@@ -131,10 +131,10 @@
                     android:textSize="20dp" />
 
                 <Button
-                    android:id="@+id/btn_restart_speech"
+                    android:id="@+id/btn_stop_speech"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text=" 重头开始"
+                    android:text="停止"
                     android:textSize="20dp" />
             </TableRow>
         </TableLayout>
